--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "aos": "^2.3.4",
+    "axios": "^1.6.2",
+    "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
