--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
