--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
