--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
